# pomodoro-analytics

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  database.py  dependecy.py  docker-compose.yml  exception.py  fixtures.py  gunicorn.conf.py  main.py  pomodoro.db  pomodoro.sqlite  pyproject.toml  requirements.txt  settings.py
.github/workflows/: github-ci.yml
alembic/: env.py
alembic/versions/: 3c7cfdd2e320_user_init.py  861988020a4c_category_type.py  afcfbd00d43f_align_models.py  e500420d5d25_added_account_table.py
app/: dependecy.py  exception.py  main.py  settings.py
app/broker/: consumer.py  producer.py
app/infrastructure/broker/: accessor.py
app/infrastructure/cache/: __init__.py  accessor.py
app/infrastructure/database/: __init__.py  accessor.py  database.py
app/tasks/: handlers.py  models.py  service.py
app/tasks/repository/: __init__.py  cache_task.py  task.py
app/users/auth/: client.py  handlers.py  schema.py  service.py
app/users/user_profile/: handlers.py  models.py  repository.py  schema.py  service.py
cache/: __init__.py  accessor.py
database/: __init__.py  accessor.py  database.py  models.py
handlers/: __init__.py  auth.py  ping.py  tasks.py  user.py
models/: tasks.py  user.py
repository/: __init__.py  cache_task.py  task.py  user.py
schema/: __init__.py  task.py  user.py
service/: __init__.py  auth.py  task.py  user.py
tests/: conftest.py
tests/e2e/: conftest.py  test_api_workflow.py
tests/fixtures/: infrastructure.py
tests/fixtures/auth/: auth_service.py  clients.py
tests/fixtures/users/: user_model.py  user_repository.py
tests/integration/auth/: test_auth_service.py
tests/unit/auth/: test_auth_service.py
