[project]
name = "pomodoro-poetry"
version = "0.1.0"
description = ""
authors = [
    {name = "Vsevolod Parashchyn",email = "sevaparashchyn@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "fastapi (>=0.136.3,<0.137.0)",
    "uvicorn (>=0.48.0,<0.49.0)",
    "pydantic-settings (>=2.14.1,<3.0.0)",
    "sqlalchemy (>=2.0.51,<3.0.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "psycopg2 (>=2.9.12,<3.0.0)",
    "redis (>=8.0.0,<9.0.0)",
    "python-jose (>=3.5.0,<4.0.0)",
    "response (>=0.5.0,<0.6.0)",
    "requests (>=2.34.2,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "greenlet (>=3.5.1,<4.0.0)",
    "gunicorn (>=26.0.0,<27.0.0)",
    "pytest (>=9.1.0,<10.0.0)",
    "aiokafka (>=0.14.0,<0.15.0)",
    "aio-pika (>=9.6.2,<10.0.0)"
]

[tool.poetry]
packages = [{include = "pomodoro_poetry", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.1.0,<10.0.0)",
    "factory-boy (>=3.3.3,<4.0.0)",
    "faker (>=40.23.0,<41.0.0)",
    "pytest-asyncio (>=1.4.0,<2.0.0)",
    "reportlab (>=4.5.1,<5.0.0)",
    "pytest-playwright (>=0.8.0,<0.9.0)"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-p no:anyio"